# SimpleBox

./: .gitignore  CHANGELOG.md  CMakeLists.txt  RCa11752  README.md  SimpleBox.aps  SimpleBox.sln  SimpleBox.vcxproj  SimpleBox.vcxproj.filters  resource.h
SimpleBox/x64/Debug/: RCa15636  SimpleBox.exe.recipe  vc143.idb
SimpleBox/x64/Debug/SimpleBox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SimpleBox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
SimpleBox/x64/Release/: SimpleBox.exe.recipe  SimpleBox.iobj  SimpleBox.ipdb
SimpleBox/x64/Release/SimpleBox.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  SimpleBox.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.write.1.tlog
include/: Game.h  MaterialEnums.h  Materials.h  UIScaler.h
src/: Game.cpp  Main.cpp  Materials.cpp  UIScaler.cpp
uml/: ClassDiagram.cd
